--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "lodash": "~2.4.*",
     "bootstrap": "~3.2.*",
     "font-awesome": "4.1.x",
-    "angular": "~1.2.*",
-    "angular-route": "~1.2.*",
+    "angular": "~1.3.*",
     "d2js": "/Work/UIO/dhis/apps/d2/.git",
     "restangular": "~1.4.0",
     "angular-bootstrap": "~0.11.0",
@@ -17,7 +16,7 @@
     "angular-translate": "~2.4.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.23"
+    "angular-mocks": "~1.3.*"
   },
   "resolutions": {
     "angular-translate": "~2.4.1"
